src/objects/BGBK__Refund2__c.object
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Only for backend purpose. No need to include on page layouts</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Refund_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Refund Id</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BGBK__Amount__c</fullName>
        <description>Refunded amount.</description>
        <label>Amount</label>
        <precision>14</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
	<fields>
        <fullName>Refund_Reason__c</fullName>
        <label>Refund Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incorrect License Type</fullName>
                </value>
                <value>
                    <fullName>Ineligible for License</fullName>
                </value>
                <value>
                    <fullName>Duplicate Licenses</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGBK__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refund recipient.</description>
        <label>Refundee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Effective_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Refund date.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Revenue_Code__c</fullName>
        <formula>IF(ISBLANK(Fee__r.Revenue_Code__c), &quot;&quot;, Fee__r.Revenue_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Reason__c</fullName>
        <description>Used to describe reason for the refund.</description>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee</label>
        <referenceTo>MUSW__Fee__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <formula>IF(    NOT(ISBLANK( Fee__c ))  ,TEXT(Fee__r.MUSW__License2__r.Application_Type__c), &apos;&apos;)</formula>
        <label>Program Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reissue_Date__c</fullName>
        <label>Reissue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reissue_Reason__c</fullName>
        <label>Reissue Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Undeliverable Warrant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reissue</fullName>
                </value>
                <value>
                    <fullName>Incorrect Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                    <default>true</default>
                    <label>Request</label>
                </value>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
                <value>
                    <fullName>Send Refund</fullName>
                </value>
                <value>
                    <fullName>Sent to AFRS</fullName>
                </value>
                <value>
                    <fullName>Received from AFRS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Issued in Error</fullName>
                </value>
                <value>
                    <fullName>Unclaimed Property</fullName>
                </value>
                <value>
                    <fullName>Long Term Debt</fullName>
                </value>
                <value>
                    <fullName>Sent to AFRS</fullName>
                </value>
                <value>
                    <fullName>Received from AFRS</fullName>
                </value>
                <value>
                    <fullName>Lost or Damaged</fullName>
                </value>
                <value>
                    <fullName>Undeliverable</fullName>
                </value>
                <value>
                    <fullName>Reissued</fullName>
                </value>
                <value>
                    <fullName>Released to AFRS</fullName>
                    <isActive>false</isActive>
                    <label>Released to AFRS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Refund</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Appraisal_Management_Company_Queue_Refund2</fullName>
        <filterScope>Queue</filterScope>
        <label>Appraisal Management Company Queue</label>
        <queue>Appraisal_Management_Company_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Camping_Resorts_Queue_Refund2</fullName>
        <filterScope>Queue</filterScope>
        <label>Camping Resorts Queue</label>
        <queue>Camping_Resorts_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Disbursement_Staff_Refund_Release_Refund2</fullName>
        <filterScope>Queue</filterScope>
        <label>Disbursement Staff Refund Release</label>
        <queue>Disbursement_Staff_Refund_Release</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Nancy_s_Queue</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected Refunds</label>
    </listViews>
    <listViews>
        <fullName>Notaries_Queue_Refund2</fullName>
        <filterScope>Queue</filterScope>
        <label>Notaries Queue</label>
        <queue>Notaries_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RBS_Queue_Refund2</fullName>
        <filterScope>Queue</filterScope>
        <label>RBS Queue</label>
        <queue>RBS_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Real_Estate_Appraiser_Courses_Queue_Refund2</fullName>
        <filterScope>Queue</filterScope>
        <label>Real Estate Appraiser Courses Queue</label>
        <queue>Real_Estate_Appraiser_Courses_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Real_Estate_Appraisers_Queue_Refund2</fullName>
        <filterScope>Queue</filterScope>
        <label>Real Estate Appraisers Queue</label>
        <queue>Real_Estate_Appraisers_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Refunds_on_Hold</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Hold</value>
        </filters>
        <label>Refunds on Hold</label>
    </listViews>
    <listViews>
        <fullName>Timeshare_Queue_Refund2</fullName>
        <filterScope>Queue</filterScope>
        <label>Timeshare Queue</label>
        <queue>Timeshare_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Undeliverable</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>BGBK__Contact__c</columns>
        <columns>BGBK__Amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Undeliverable</value>
        </filters>
        <label>Undeliverable</label>
    </listViews>
    <nameField>
        <displayFormat>RFD-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>